--- a/downloader/src/main/resources/application-dev.yml
+++ b/downloader/src/main/resources/application-dev.yml
@@ -7,6 +7,11 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  cache:
+    type: redis
+    redis:
+      time-to-live: 1d
+      use-key-prefix: true
   datasource:
     url: jdbc:postgresql://postgres:5432/downloader
     username: postgres
