--- a/downloader/src/main/resources/application-dev.yml
+++ b/downloader/src/main/resources/application-dev.yml
@@ -21,3 +21,7 @@ spring:
       port: 6379
       password:
       database: 0
+springdoc:
+  swagger-ui:
+    syntax-highlight:
+      activated: false
