--- a/downloader/src/main/resources/application.yml
+++ b/downloader/src/main/resources/application.yml
@@ -21,4 +21,7 @@ spring:
       port: 6380
       password:
       database: 0
-
+springdoc:
+  swagger-ui:
+    syntax-highlight:
+      activated: false
