--- a/downloader/pom.xml
+++ b/downloader/pom.xml
@@ -78,6 +78,15 @@
             <artifactId>lettuce-core</artifactId>
             <version>6.2.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
