--- a/downloader/src/main/resources/application-dev.yml
+++ b/downloader/src/main/resources/application-dev.yml
@@ -25,3 +25,7 @@ springdoc:
   swagger-ui:
     syntax-highlight:
       activated: false
+    operations-sorter: method
+    tags-sorter: alpha
+  override-with-generic-response: false
+  writer-with-order-by-keys: true
